--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "main": [
         {
-            "title": "Основное1",
+            "title": "Основное",
             "URL": "https://potokk.atlassian.net/wiki/spaces/Potok/pages/2462810135"
         }
     ],
