add formulas article

--- a/config.json
+++ b/config.json
@@ -83,6 +83,10 @@
         {
             "title": "Типы динамических полей",
             "URL": "https://potokk.atlassian.net/wiki/spaces/Potok/pages/2473099304"
+        },
+        {
+            "title": "Формулы в конструкторе",
+            "URL": "https://potokk.atlassian.net/wiki/spaces/TECH/pages/2199093259"
         }
     ],
     "questionnaries": [
