--- a/public-API.yaml
+++ b/public-API.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Пример документации API
   version: v3
-  description: test api description
+  description: test api description. Make Potok API great again
 servers:
   - url: 'https://app.potok.io/api/v3/'
     description: Potok.io
