--- a/public-API.yaml
+++ b/public-API.yaml
@@ -320,7 +320,7 @@ paths:
         description: ''
       description: Создает новую потребность в системе.
     get:
-      summary: ''
+      summary: Получение списка потребностей
       operationId: get-demands
       responses:
         '200':
