--- a/public-API.yaml
+++ b/public-API.yaml
@@ -327,7 +327,7 @@ paths:
           description: OK
       tags:
         - Потребности (demands)
-      description: ''
+      description: Возвращает список потребностей компании.
   '/users/{userId}':
     parameters:
       - schema:
