--- a/public-API.yaml
+++ b/public-API.yaml
@@ -1037,12 +1037,12 @@ components:
       name: Authorization
       type: apiKey
       in: header
-      description: Токен компании, создается в Поток в разделе `Генерация токенов`.
+      description: "Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре."
     Токен в параметре запроса:
       name: token
       type: apiKey
       in: query
-      description: Токен компании, создается в Поток в разделе `Генерация токенов`.
+      description: "Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре."
 security:
   - Токен в заголовке: []
   - Токен в параметре запроса: []
