--- a/public-API.yaml
+++ b/public-API.yaml
@@ -16,7 +16,7 @@ paths:
         - Потребности (demands)
       responses:
         '200':
-          description: OK
+          description: 'Описание тела ответа. Наример, пишем, что будуту также отдаваться все динамические поля при их наличии.'
           content:
             application/json:
               schema:
@@ -1037,12 +1037,12 @@ components:
       name: Authorization
       type: apiKey
       in: header
-      description: "Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре."
+      description: 'Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре.'
     Токен в параметре запроса:
       name: token
       type: apiKey
       in: query
-      description: "Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре."
+      description: 'Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре.'
 security:
   - Токен в заголовке: []
   - Токен в параметре запроса: []
