--- a/public-API.yaml
+++ b/public-API.yaml
@@ -16,7 +16,11 @@ paths:
         - Потребности (demands)
       responses:
         '200':
-          description: 'Описание тела ответа. Наример, пишем, что будуту также отдаваться все динамические поля при их наличии.'
+          description: |-
+            Описание тела ответа. Наример, пишем, что будуту также отдаваться все динамические поля при их наличии.
+                    <div style="color:#bbb; background-color:#444; padding: 12px 0px 12px 12px;border-left: 5px solid #F06560;">
+                      <b style="color:#F06560">Совет</b>  Пишем дельный совет
+                    </div>  
           content:
             application/json:
               schema:
@@ -1043,6 +1047,12 @@ components:
       type: apiKey
       in: query
       description: 'Токен компании, создается в Поток в разделе `Генерация токенов`. Может передаваться одним из двух способов: в заголовке или в query-параметре.'
+  requestBodies:
+    test:
+      content:
+        application/json:
+          schema:
+            type: object
 security:
   - Токен в заголовке: []
   - Токен в параметре запроса: []
