--- a/public-API.yaml
+++ b/public-API.yaml
@@ -19,7 +19,7 @@ paths:
           description: |-
             Описание тела ответа. Наример, пишем, что будуту также отдаваться все динамические поля при их наличии.
                     <div style="color:#bbb; background-color:#444; padding: 12px 0px 12px 12px;border-left: 5px solid #F06560;">
-                      <b style="color:#F06560">Совет</b>  Пишем дельный совет
+                      <b style="color:#F06560">Совет |</b>  Пишем дельный совет
                     </div>  
           content:
             application/json:
