--- a/public-API.yaml
+++ b/public-API.yaml
@@ -18,7 +18,7 @@ paths:
         '200':
           description: |-
             Описание тела ответа. Наример, пишем, что будуту также отдаваться все динамические поля при их наличии.
-                    <div style="color:#bbb; background-color:#444; padding: 12px 0px 12px 12px;border-left: 5px solid #F06560;">
+                    <div style="color: rgb(0 0 0);background-color: rgb(255 255 255);padding: 12px 0px 12px 12px;border-left: 5px solid rgb(240, 101, 96);">
                       <b style="color:#F06560">Совет |</b>  Пишем дельный совет
                     </div>  
           content:
