--- a/public-API.yaml
+++ b/public-API.yaml
@@ -17,7 +17,7 @@ paths:
       responses:
         '200':
           description: |-
-            Описание тела ответа. Наример, пишем, что будуту также отдаваться все динамические поля при их наличии.
+            Описание тела ответа. Например, пишем, что будуту также отдаваться все динамические поля при их наличии.
                     <div style="color: rgb(0 0 0);background-color: rgb(255 255 255);padding: 12px 0px 12px 12px;border-left: 5px solid rgb(240, 101, 96);">
                       <b style="color:#F06560">Совет |</b>  Пишем дельный совет
                     </div>  
